Fixed overflow on methods to correct combo box problem

--- a/app/styles/less/methods.less
+++ b/app/styles/less/methods.less
@@ -44,7 +44,6 @@
 .method {
   margin: 10px 0px;
   border-radius: 0 5px 5px 0;
-  overflow: hidden;
   border-width: 1px;
   border-style: solid;
 
